--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,352 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.nav-bar {
+  background-color: white;
+  color: #6d6d75;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 25px;
+  margin: 20px 35px 20px 35px;
+}
+
+.logo {
+  width: 250px;
+  height: auto;
+}
+
+.nav-link {
+  list-style-type: none;
+}
+
+.nav-link .nav-list {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+.nav-bar a {
+  color: #458343;
+  text-decoration: none;
+}
+
+.nav-bar a:hover {
+  color: #9dd69c;
+}
+
+.menu {
+  display: none;
+}
+
+.menu-line {
+  width: 20px;
+  height: 3px;
+  background-color: #6d6d75;
+  margin-bottom: 4px;
+}
+
+.headline {
+  display: flex;
+  border: 1px solid white;
+  box-shadow: 5px 5px 16px rgb(233, 231, 231);
+  background-color: white;
+  max-width: 100%;
+}
+
+.headline-image {
+  max-width: 50%;
+  margin: 0;
+}
+
+.headline-image img{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  object-fit: cover;
+}
+
+.main-article {
+  display: block;
+  margin: 8% 4%;
+  max-width: 50%;
+  height: auto;
+  
+}
+
+.main-article h1 {
+  font-size: 45px;
+  color: #458343;
+}
+
+.main-article a {
+  text-decoration: none;
+  color: #458343;
+}
+
+.main-article a:hover {
+  color: #9dd69c;
+}
+
+.main-article h3 {
+  font-size: 18px;
+  color: #6d6d75;
+  font-weight: 200;
+  text-align: justify;
+}
+
+.main-article h1, h3{
+  margin: 30px;
+}
+
+.headline button {
+  display: block;
+  text-align: center;
+  border: none;
+  font-size: 15px;
+  background-color: #9dd69c;
+  padding: 10px 20px;
+  margin: auto;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+}
+
+.headline button a {
+  color: white;
+  text-decoration: none;
+}
+
+.headline button a:hover {
+  color: #458343;
+}
+
+.container-grid {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  margin-left: 35px;
+  margin: 35px;
+  
+}
+
+.news-grid {
+  margin: 80px 20px 20px 20px;
+  padding: 0 0 30px 0;
+  border: 1px solid white;
+  box-shadow: 1px 2px 50px rgb(233, 231, 231);
+  background-color: white;
+}
+
+.news-grid p{
+  margin: 30px;
+  overflow: hidden;
+  color: #6d6d75;
+}
+
+.news-grid h1 {
+  text-align: center;
+}
+
+.news-grid a {
+  text-decoration: none;
+  color: #458343;
+}
+
+.news-grid a:hover {
+  color: #9dd69c;
+}
+
+.grid-image {
+  max-width: 100%;
+  height: 300px;
+  margin: 0;
+  display: block;
+  overflow: hidden;
+}
+
+.grid-image img {
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.news-grid p {
+  text-align: center;
+  font-size: 16px;
+}
+
+.grid-button {
+  display: block;
+  text-align: center;
+  border: none;
+  font-size: 15px;
+  background-color: #9dd69c;
+  padding: 10px 20px;
+  margin: auto;
+  border-radius: 20px;
+  text-decoration: none;
+}
+
+.grid-button a {
+  color: white;
+}
+
+.grid-button a:hover {
+  color: #458343;
+}
+
+.main-footer {
+  text-align: center;
+  background-color: #9dd69c;
+  margin-top: 5%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: white;
+  font-size: 15px;
+}
+
+
+/*For tablet*/
+@media (max-width: 1024px) {
+  .nav-bar {
+      flex-direction: column;
+  }
+
+  .headline {
+      flex-direction: column;
+      max-width: 100%;
+  }
+
+  .headline-image {
+      max-width: 100%;
+  }
+
+  .headline-image img{
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      object-fit: cover;
+  }
+
+  .headline h1 {
+      text-align: left;
+  }
+
+  .headline button {
+      display: block;
+      margin: auto;
+  }
+
+  .main-article {
+      display: block;
+      margin: 50px;
+      max-width: 100%;
+      height: auto;
+  }
+
+  .container-grid {
+      grid-template-columns: 50% 50%;
+  }
+
+  .grid-image {
+      max-width: 100%;
+      display: block;
+      overflow: hidden;
+  }
+
+  .grid-image img {
+      max-width: 100%;
+      object-fit: cover;
+}
+ 
+}
+
+/*For mobile*/
+@media (max-width: 667px) {
+  .nav-bar {
+      flex-direction: column;
+      position: relative;
+  }
+
+  .nav-bar .container-logo {
+      width: 100%;
+  }
+
+  .nav-link .nav-list {
+      display: block;
+  }
+
+  .nav-link {
+      list-style: none;
+      width: 100%;
+      text-align: center;
+      padding-top: 10px;
+      display: none;
+  }
+
+  .logo {
+      margin-top: 15px;
+      margin-left: 15px;
+      width: 150px;
+      height: auto;
+  }
+
+  .menu {
+      display: block;
+      position: absolute;
+      right: 15px;
+      top: 30px;
+  }
+
+  .headline {
+      flex-direction: column;
+      margin: 0;
+  }
+
+  .headline-image {
+      max-width: 100%;
+      margin: 0;
+  }
+
+  .headline-image img {
+      max-width: 100%;
+  }
+
+  .headline button {
+      display: block;
+      margin: auto;
+  }
+
+  .main-article {
+      max-width: 100%;
+      max-width: auto;
+      margin: 30px;
+  }
+
+  .active {
+      display: block;
+  }
+
+  .container-grid {
+      grid-template-columns: 100%;
+
+}
+
+.news-grid {
+  margin: 50px 0 50px 0;
+}
+
+.grid-image {
+  max-width: 100%;
+  display: block;
+  overflow: hidden;
+}
+
+.grid-image img {
+  max-width: 100%;
+  object-fit: cover;
+}
+
 }
