--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,75 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: linear-gradient(
+    109.6deg,
+    rgb(204, 228, 247) 11.2%,
+    rgb(237, 246, 250) 100.2%
+  );
+  color: #4d8291;
+  font: 14px "Noto Sans", sans-serif;
+}
+.top-heading {
+  display: flex;
+}
+.top-heading img {
+  width: 10%;
+  padding: 1%;
+}
+.top-heading h1 {
+  font: 50px "Megrim", sans-serif;
+  display: flex;
+  justify-content: flex-start;
+}
+.top-heading h2 {
+  font: 20px "Oswald", sans-serif;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.island-info {
+  border: 2px solid;
+  height: 420px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.island-info h3 {
+  font: 20px "Oswald", sans-serif;
+}
+.islands {
+  margin: 5px;
+  border: 2px solid;
+  border-radius: 5px;
+  padding: 5px;
+  width: 400px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.islands img {
+  height: 60%;
+  width: 60%;
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  body {
+    flex-direction: row;
+
+    flex-wrap: wrap;
+  }
+  img {
+    width: 40px;
+  }
+}
+@media (min-width: 1025px) {
+  body {
+    flex-direction: row;
+  }
+  img {
+    width: 40px;
+  }
 }
