--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,4 @@
-* {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -120,38 +120,99 @@ html {
     text-align: center;
   }
 
-  .big-news {
-    background-color:#FFEEBB;
-    display: block;
-    margin: 2rem auto;
-    padding: 2rem;
-  }
 
-  .big-news:hover {
-    background-color: #FFDCB8;
-    cursor: pointer;
+  .carousel-container {
+    background-color:#FFEEBB;
+    display: grid;
+    padding: 2.5rem;
+    margin: 2rem auto;
+    place-items: center;
   }
   
-  .big-news-image {
-    box-shadow: 0px 3px 3px 0px #1c1b18;
-    display: flex;
-    height: auto;
-    justify-content: center;
-    margin: 0 auto 1rem;
+  .slider {
+    height: 350px;
+    max-width: 800px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+  }
+  
+  .slide {
+    height: 350px;
+    max-width: 800px;
+    position: absolute;
+    transition: all 0.5s;
+    width: 100%;
+    display: block;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  
+  .slide img {
+    height: 200px;
+    object-fit: cover;
     width: 100%;
   }
 
-  .read-more {
-    font-weight: 900;
-    padding: 1rem;
+  .slide-text-box {
+    margin-top: 1rem;
+    text-align: center;
   }
 
-  .hidden-p {
-    display: none;
+  .slide h1 {
+    font-size: 1.3rem;
+    margin-bottom: 13px;
+  }
+  
+  .slide-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 35px;
+    height: 150px;
+    position: absolute;
+    width: 40px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffc78e;
+  }
+  
+  .btn:active {
+    transform: scale(1.1);
+  }
+  
+  .btn-prev {
+    left: 1.4rem;
+    bottom: 17.5rem;
+  }
+  
+  .btn-next {
+    bottom: 17.5rem;
+    right: 1.4rem;
   }
 
-  button {
-    display: none;
+
+  .read-more-btn {
+    box-shadow: 0px 2px 2px 0px #1c1b18;
+    background-color:#FFDCB8;
+    border-radius:15px;
+    border: none;
+    cursor: pointer;
+    display: block;
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: bold;
+    height: 40px;
+    margin: 0 auto;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
+    width: 190px;
+  }
+
+  .read-more-btn:hover {  
+    background-color:#fbc498;
   }
 
   .small-news-p {
@@ -198,13 +259,18 @@ html {
   footer {
     padding: 2rem 0;
     text-align: center;
+    color:#FFDCB8;
   }
 
   footer > a {
     color:#FFDCB8;
   }
 
-  @media (max-width:375px) {
+  strong{
+    text-transform: uppercase;
+  }
+
+  @media (max-width:400px) {
     .nav-menu.active {
       width:100%;
     }
@@ -213,6 +279,17 @@ html {
       display: none;
     }
 
+    .slide img {
+    height: 150px;
+  }
+
+  .btn-prev {
+    bottom: 23.6rem;
+  }
+  
+  .btn-next {
+    bottom: 23.6rem;
+  }
     .small-news {
       grid-template-rows: repeat(4, 3rem 1fr 1fr 1fr 1fr); 
     }
@@ -239,17 +316,6 @@ html {
   width: 20%;
 }
 
-
-.big-news {
-  margin: 50px auto;
-}
-
-
-.big-news-image {
-  margin: 0 auto 1rem;
-  max-width: 650px;
-  height: auto;
-}
 
 .small-news {
     grid-template-columns: repeat(2, 1fr);
@@ -291,57 +357,38 @@ html {
   .hamburger {
     display: none;
   }
-
-  .big-news {
-    background-color:#FFEEBB;
+  
+  .slide {
     display: flex;
     justify-content: space-between;
-    margin: 50px auto;
+  }
+  
+  .slide img {
+    height: 100%;
+    width: 500px;
   }
 
-  .big-news:hover {
-    cursor: default;
-    background-color: #FFEEBB;
+  .slide-text-box {
+    margin-top: 5rem;
   }
-
-  .big-news-image-box {
-    display: flex;
-    width:40%;
+  
+  .slide-btn:active {
+    transform: scale(1.1);
   }
-
-  .big-news-text-box {
-    display: block;
-    padding-left: 1rem;
-    width: 60%;  
+  
+  .slide-btn:hover {
+    color: #ff9a35;
+    font-size: 40px;
+    transition: 0.2s;
   }
-
-  .read-more {
-    display: none;
+  .btn-prev {
+    left: 3rem;
+    top: 35%;
   }
-
-  .hidden-p {
-    display: inline;
-  }
-
-  button {
-    box-shadow: 0px 2px 2px 0px #1c1b18;
-    background-color:#FFDCB8;
-    border-radius:15px;
-    border: none;
-    cursor: pointer;
-    display: block;
-    font-family: Arial;
-    font-size: 14px;
-    font-weight: bold;
-    height: 40px;
-    margin: 2rem auto 0;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #ffffff;
-    width: 200px;
-  }
-
-  button:hover {  
-    background-color:#fbc498;
+  
+  .btn-next {
+    right: 3rem;
+    top: 35%;
   }
 
   .small-news {
