--- a/code/style.css
+++ b/code/style.css
@@ -3,43 +3,70 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: rgba(255, 255, 255, 0.512);
-  background-blend-mode:lighten;
+  background-blend-mode: lighten;
   background-attachment: fixed;
-  
+}
+
+nav {
   display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 20px;
+  position: sticky; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: auto; /* Full width */
 }
 
-/* ul {
+nav h2 {
+  color: blueviolet;
+  font-size: 40px;
+}
+
+nav h2 span {
+  color: rgb(22, 34, 167);
+}
+
+nav ul li {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  display: inline-block;
+  padding: 10px 20px;
 }
 
-.navbar{
-  background-color: rgba(255, 255, 255, 0.099);
-  width: 1890px;
+nav ul li a {
+  color: purple;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 30px;
 }
 
-.navbar img{
-  float: left;
-  width: 50px;
-  border-radius: 50%;
-} */
+nav ul li a:hover {
+  color: #ea1538;
+  transition: 0.3s;
+}
 
-/* h1 {
-  color: blue;
+button {
+  border: none;
+  background: #ea1538;
+  padding: 12px 30px;
+  border-radius: 30px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+button:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+  transition: 0.4s;
 }
 
 @media (min-width: 668px) {
   h1 {
   color: red;
   }
-} */
-
 
 .grey-box{
   background-color: rgb(238, 231, 231, 0,04);
@@ -54,12 +81,12 @@ body {
 
 .grey-box h2 {
   font-size: 30px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .grey-box p {
   font-size: 20px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .grey-box img {
@@ -87,7 +114,7 @@ body {
     font-size: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-  
+
   .grey-box p {
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -95,7 +122,7 @@ body {
 
   .grey-box img {
     width: 100%;
-  }  
+  }
 }
 
 @media (min-width: 1025px) {
@@ -118,7 +145,7 @@ body {
     font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-  
+
   .grey-box p {
     font-size: 40px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -126,7 +153,5 @@ body {
 
   .grey-box img {
     width: 100%;
-  }  
+  }
 }
-
-
