--- a/code/style.css
+++ b/code/style.css
@@ -63,13 +63,8 @@ button:hover {
   transition: 0.4s;
 }
 
-@media (min-width: 668px) {
-  h1 {
-  color: red;
-  }
-
-.grey-box{
-  background-color: rgb(238, 231, 231, 0,04);
+.grey-box {
+  background-color: rgb(238, 231, 231, 0, 04);
   padding: 20px;
   width: 300px;
 
@@ -96,14 +91,14 @@ button:hover {
 @media (min-width: 667px) and (max-width: 1024px) {
   body {
     flex-direction: row;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     /* background: ; */
   }
-  .grey-box{
-    background-color: rgb(238, 231, 231, 0,04);
+  .grey-box {
+    background-color: rgb(238, 231, 231, 0, 04);
     padding: 20px;
     width: 300px;
-  
+
     width: 30%;
     height: 30%;
     justify-content: center;
@@ -112,12 +107,14 @@ button:hover {
 
   .grey-box h2 {
     font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
   }
 
   .grey-box p {
     font-size: 20px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
   }
 
   .grey-box img {
@@ -126,15 +123,15 @@ button:hover {
 }
 
 @media (min-width: 1025px) {
-  body{
-  flex-direction: row; 
-  flex-wrap:wrap;
+  body {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
-  .grey-box{
-    background-color: rgb(238, 231, 231, 0,04);
+  .grey-box {
+    background-color: rgb(238, 231, 231, 0, 04);
     padding: 20px;
     width: 300px;
-  
+
     width: 20%;
     height: 20%;
     justify-content: center;
@@ -143,12 +140,14 @@ button:hover {
 
   .grey-box h2 {
     font-size: 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
   }
 
   .grey-box p {
     font-size: 40px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
   }
 
   .grey-box img {
