--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,278 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #d0eee6;
+  color: black;
+  min-width: 414px;
+}
+
+h1 {
+  margin: auto;
+}
+body {
+  margin: 0;
+}
+
+.page-container {
+  display: grid;
+}
+
+/*** Header section ***/
+header {
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.navbar {
+  margin: auto;
+  align-self: center;
+  text-align: center;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+#headerLinks {
+  display: none;
+  flex: auto;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  height: 50px;
+  margin-bottom: 10px;
+  font-size: 25px;
+  transform: translateY(-10px);
+}
+#headerLinks > a {
+  min-width: 80px;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+/** **/
+
+/** Big news section **/
+
+.big-news {
+  background-color: white;
+  display: flex;
+  flex-flow: column;
+  border-top: #948981 1px solid;
+  border-bottom: #948981 1px solid;
+  padding-bottom: 20px;
+}
+
+.big-news img {
+  width: 100%;
+  height: 100%;
+}
+
+.big-news figure {
+  margin: 0rem;
+}
+
+.big-news-link {
+  text-decoration: none;
+}
+
+.big-news h1 {
+  margin: 0.5rem;
+  color: black;
+}
+
+.big-news-text {
+  display: none;
+}
+/** **/
+
+/** Other news section **/
+.other-news-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem 0;
+}
+
+.other-news-article {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0;
+  text-decoration: none;
+  color: black;
+}
+
+.other-news-article img {
+  object-fit: cover;
+  min-width: 50%;
+  height: 230px;
+  width: 50%;
+}
+
+.other-news-article-info {
+  margin: 1rem;
+}
+/** **/
+
+/****** Media Queries ******/
+/** TABLET **/
+@media screen and (min-width: 675px) and (max-width: 1039px) {
+  /*** Header section tablet***/
+  .header-site-name {
+    display: none;
+  }
+  .navbar {
+    display: none;
+  }
+
+  #headerLinks {
+    display: flex;
+    transform: none;
+    height: 100%;
+    margin: 0;
+  }
+  /** **/
+
+  /** Big news section tablet**/
+  .big-news {
+    flex-flow: row;
+    padding-bottom: 0;
+  }
+  .big-news figure {
+    width: 50%;
+  }
+
+  .big-news-link {
+    width: 50%;
+    align-self: center;
+  }
+  .big-news h1 {
+    margin: 1rem;
+  }
+  .big-news-text {
+    display: block;
+    color: black;
+    margin: 1rem;
+  }
+  /** **/
+
+  /** Other news section tablet **/
+  .other-news-container {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 1.5rem 1rem;
+  }
+  .other-news-article {
+    flex-direction: column;
+    background-color: white;
+    border-radius: 5px;
+    margin: 0;
+  }
+  .other-news-article img {
+    box-sizing: border-box;
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    padding: 1rem;
+  }
+  /** **/
+}
+
+/** DESKTOP **/
+@media screen and (min-width: 1040px) {
+  /*** Header section desktop***/
+  .header-site-name {
+    min-width: 500px;
+    text-align: center;
+  }
+  .navbar {
+    display: none;
+  }
+
+  #headerLinks {
+    display: flex;
+    transform: none;
+    justify-content: flex-end;
+    gap: 30px;
+    height: 100%;
+    margin: 0 20px 0 0;
+  }
+  /** **/
+
+  /** Big news section desktop**/
+  .big-news {
+    flex-flow: row;
+    padding-bottom: 0;
+  }
+  .big-news figure {
+    width: 50%;
+  }
+
+  .big-news-link {
+    width: 50%;
+    align-self: center;
+    text-align: center;
+  }
+  .big-news h1 {
+    margin: 1rem;
+  }
+  .big-news-text {
+    display: block;
+    color: black;
+    margin: 1rem;
+  }
+  /** **/
+
+  /** Other news section desktop **/
+
+  .other-news-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 2rem 1.5rem;
+  }
+  .other-news-article {
+    flex-direction: column;
+    background-color: white;
+    border-radius: 5px;
+    margin: 0;
+  }
+  .other-news-article img {
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 10px;
+    padding: 1rem;
+  }
+  /** **/
+}
+
+/** THE BIG **/
+@media screen and (min-width: 1580px) {
+  body {
+    max-width: 1580px;
+    margin: 0 auto;
+  }
+  /** **/
 }
