--- a/code/style.css
+++ b/code/style.css
@@ -1,14 +1,44 @@
+/*General styles*/
 html {
-  background: #F0EBE3;
+  background: #FFEDDB;
   color: #fff;
-  font-family:Verdana, Geneva, Tahoma, sans-serif
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.site-header {
+body {
+  display: flex; 
+  flex-direction: column;
+  gap: 8px;
+}
+
+p {
+  size: 10px;
+}
+
+h2 {
+  size: 9px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+button {
+  background-color: #E3B7A0;
+  border: none;
+  padding: 5px;
+  margin-top: 15px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 50%;
+}
+
+button:hover {
+  background-color: #BF9270;
+}
+
+/*Header*/
+.flex-container-site-header {
   display: flex;
-  margin: 20px; 
-  height: 300px; 
-  background-color:#7D9D9C;
+  background-color: #E3B7A0;
   align-items: center; 
   justify-content: space-between;
 }
@@ -16,19 +46,26 @@ html {
 .logo {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:flex-start;
 }
 
 .logo img {
-  padding-top: 40px;
-  height: 150px;
-  width: 150px;
+  margin: 10px 0px 5px 20px;
+  max-height: 70px;
 }
 
 .logo h1 {
   font-weight: bold;
-  font-family: sans-serif;
-  padding: 0px 0px 40px 20px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 0px 0px 0px 20px;
+  font-size: 25px;
+  margin: 0;
+}
+
+.logo h2 {
+  padding-left: 20px;
+  margin: 2px 0px 10px 0px;
+  font-size: 15px;
 }
 
 .navbar {
@@ -41,15 +78,16 @@ html {
   width: 50px;
 }
 
+/*Big news*/
 .big-news-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 100px);
-  margin:20px;
+  grid-template-rows: 70% 20% 10%;
+  margin-bottom: 150px;
 }
 
 .big-news-item {
-  background-color: #576F72;
+  background-color: #EDCDBB;
   grid-row: span 3;
 }
 
@@ -69,10 +107,224 @@ html {
   margin-left: 20px;
 }
 
-@media (min-width: 668px) {
+/*Other news*/
+.flex-parent-other-news {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5px;
+  }
+
+.flex-child-news {
+  height: 400px;
+  width: 100%;
+  background-color: #EDCDBB;
+  display:flex;
+  flex-direction: row;
+  align-content:space-around;
+  align-items: center;
+  
+}
+
+.flex-child-news-img {
+  padding: 15px; 
+}
+.flex-child-news img {
+  max-height: 350px;
+  max-width: auto;
+
+}
+ 
+.flex-child-news-text {
+  display: flex;
+  padding: 15px;
+  flex-direction: column;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.flex-child-news-text p {
+  align-self:flex-end;
+}
+
+/*iPad*/
+@media (min-width: 668px) and (max-width: 1024px) {
+  .flex-container-site-header {
+    display: flex;
+    background-color: #E3B7A0;
+    align-items: center; 
+    justify-content: space-between;
+  }
+  
+  .logo {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+  }
+  
+  .logo img {
+    margin: 10px 0px 5px 20px;
+    max-height: 100px;
+  }
+  
+  .logo h1 {
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 0px 0px 0px 20px;
+    font-size: 40px;
+    margin: 0;
+  }
+  
+  .logo h2 {
+    padding-left: 20px;
+    margin: 2px 0px 10px 0px;
+    font-size: 20px;
+  }
+  
+  .navbar {
+    margin-right: 50px;
+  }
+  
+  .nav-button {
+    height: 50px; 
+    width: 50px;
+  }
   .big-news-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr, 100px;
+    grid-template-rows: 1fr 1fr;
+    margin-bottom: 0px;
   }
-}
+  .picture-big-news-item {
+    grid-row: span 6;
+  }
+  .h1-big-news-item {
+    display: grid;
+  }
+  .h1-big-news-item h1 {
+    align-self: flex-end;
+  }
+
+  .flex-parent-other-news {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    }
+  
+  .flex-child-news {
+    height: 600px;
+    width: 45%;
+    background-color: #EDCDBB;
+    flex-grow: 1;
+    margin: 5px;
+    display:flex;
+    flex-direction: column;
+    align-content:space-around;
+    align-items: center;
+    }
+    .flex-child-news-img {
+      padding: 5px; 
+    }
+    .flex-child-news img {
+      max-width: 250px;
+    
+    }
+    .flex-child-news-text {
+      display: flex;
+      padding: 15px;
+      flex-direction: column;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .flex-child-news-text p {
+      align-self:flex-end;
+    }
+    }
+ 
+/*Desktop*/
+@media (min-width: 1025px) {
+  .flex-container-site-header {
+    display: flex;
+    background-color: #E3B7A0;
+    align-items: center; 
+    justify-content: space-between;
+  }
+  .logo {
+    display: flex;
+    flex-direction: row;
+    align-items:flex-end;
+  }
+  
+  .logo img {
+    margin: 10px 0px 5px 20px;
+    max-height: 80px;
+  }
+  
+  .logo h1 {
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 0px 0px 0px 20px;
+    size: 80px;
+    margin-bottom: 20px;
+  }
+  
+  .logo h2 {
+    padding-left: 20px;
+    margin-bottom: 20px;
+    font-size: 15px;
+  }
+  
+  .navbar {
+    margin-right: 50px;
+  }
+  
+  .nav-button {
+    height: 50px; 
+    width: 50px;
+  }
+  .big-news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-bottom: 0px;
+    }
+  .picture-big-news-item {
+    grid-row: span 6;
+    }
+  .h1-big-news-item {
+    display: grid;
+    }
+  .h1-big-news-item h1 {
+    align-self: flex-end;
+    }
+  .flex-parent-other-news {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: none;
+    }
+  .flex-child-news {
+    height: 400px;
+    width: 24%;
+    background-color: #EDCDBB;
+    margin: 5px;
+    display:flex;
+    flex-direction: row;
+    align-content:space-around;
+    align-items: center;
+    }
+    .flex-child-news-img {
+      padding: 15px; 
+    }
+    .flex-child-news img {
+      max-height: 370px;
+    
+    }
+    .flex-child-news-text {
+      display: flex;
+      padding: 15px;
+      flex-direction: column;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .flex-child-news-text p {
+      align-self:flex-end;
+    }
+    }
