--- a/code/style.css
+++ b/code/style.css
@@ -88,19 +88,43 @@ header {
 .big-news img {
   width: 100%;
   height: 100%;
+  transform: translateX(0px);
+  transition: transform 0.5s;
+}
+
+.big-news img:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s;
 }
 
 .big-news figure {
   margin: 0rem;
+  overflow: hidden;
 }
 
 .big-news-link {
   text-decoration: none;
 }
 
-.big-news h1 {
+.big-news-header {
   margin: 0.5rem;
   color: black;
+  background-image: linear-gradient(
+    transparent 0%,
+    transparent calc(50% - 9px),
+    rgb(215 239 230) calc(50% - 9px),
+    rgb(246 255 162) 100%
+  );
+  transition: background-position 320ms ease-in-out 0s,
+    padding 120ms ease-in-out 0s;
+  background-size: 100% 200%;
+  background-position: 0px 0px;
+  width: 330px;
+}
+
+.big-news-header:hover {
+  background-position: 0px center;
+  transition: background-position 320ms ease-in-out 0s;
 }
 
 .big-news-text {
@@ -113,6 +137,16 @@ header {
   display: grid;
   grid-template-columns: 1fr;
   margin: 1rem 0;
+}
+
+.other-news-container a {
+  transform: translateY(0px);
+  transition: transform ease-in-out 300ms;
+}
+
+.other-news-container a:hover {
+  transform: translateY(-10px);
+  transition: transform ease-in-out 300ms;
 }
 
 .other-news-article {
@@ -173,7 +207,7 @@ header {
     width: 50%;
     align-self: center;
   }
-  .big-news h1 {
+  .big-news-header {
     margin: 1rem;
   }
   .big-news-text {
@@ -240,8 +274,10 @@ header {
     align-self: center;
     text-align: center;
   }
-  .big-news h1 {
+  .big-news-header {
     margin: 1rem;
+    display: inline;
+    padding: 0 15px;
   }
   .big-news-text {
     display: block;
