Theme color in main instead of html

--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 html {
-  background: #d0eee6;
+  background: white;
   color: black;
   min-width: 414px;
 }
@@ -9,6 +9,10 @@ h1 {
 }
 body {
   margin: 0;
+}
+
+main {
+  background-color: #d0eee6;
 }
 
 .page-container {
