--- a/new code/style.css
+++ b/new code/style.css
@@ -41,25 +41,25 @@ nav ul li a:hover {
   border: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
-/* .dropdown-tablet-mobile {
-  position: relative;
-  display: inline-block;
-} */
+.dropdown-tablet-mobile {
+  order: 1; /* sets the menu as last element as standard value 0 */
+}
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  right: 0;
+  background-color: #f9f9f9bd;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
   z-index: 999;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: rgb(128, 0, 128);
+  font-style: italic;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -75,12 +75,6 @@ nav ul li a:hover {
   background: #ea1538;
   color: white;
   font-weight: bold;
-}
-
-.subscribe:hover {
-  transform: scale(1.3);
-  cursor: pointer;
-  transition: 0.4s;
 }
 
 /* generic homepage grid*/
@@ -108,19 +102,13 @@ nav ul li a:hover {
   }
 
   nav h2 {
-    font-size: 20px;
-  }
-
-  nav ul li {
-    padding: 10px 10px;
-  }
-
-  nav ul li a {
-    font-size: 20px;
+    font-size: 30px;
+    width: 40%;
+    margin: 0px;
   }
 
   .subscribe {
-    padding: 12px 30px;
+    padding: 12px 20px;
     border-radius: 30px;
     font-size: 15px;
     border: none;
@@ -129,7 +117,7 @@ nav ul li a:hover {
     font-weight: bold;
   }
 
-  button :hover {
+  .subscribe :hover {
     transform: scale(1.3);
     cursor: pointer;
     transition: 0.4s;
@@ -159,14 +147,6 @@ nav ul li a:hover {
 
   nav h2 {
     font-size: 40px;
-  }
-
-  nav ul li {
-    padding: 10px 20px;
-  }
-
-  nav ul li a {
-    font-size: 30px;
   }
 
   .subscribe {
@@ -226,10 +206,16 @@ nav ul li a:hover {
     font-size: 20px;
   }
 
-  button {
+  .subscribe {
     padding: 12px 30px;
     border-radius: 30px;
     font-size: 15px;
+  }
+
+  .subscribe:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+    transition: 0.4s;
   }
 
   /* computer section grid*/
