--- a/code/style.css
+++ b/code/style.css
@@ -51,7 +51,7 @@ body {
 input[type=text], select, textarea {
   width: 100%; 
   padding: 12px; 
-  border: 1px solid #ccc; 
+  border: 1px solid rgb(204, 204, 204); 
   border-radius: 4px; 
   box-sizing: border-box; 
   margin-top: 6px; 
@@ -77,6 +77,31 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 50px 20px 20px 20px;
+}
+
+/* ----------------ABOUT---------------- */
+
+.grid-about {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;  
+  width: 100%;
+}
+
+.container-about {
+  display: flex;
+  flex-direction: column;
+  grid-column: span 8 / auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-info {
+  display: block;
+  width: 100%;
+  text-align: left;
 }
 
 /* ----------------DIVIDERS---------------- */
@@ -205,9 +230,25 @@ img {
 
   .header {
     align-items: center;
-    
   }
   
+  .container-about {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
+  .about-info {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .about-info-child {
+    display: block;
+    width: 50%;
+  }
   .other-news { 
     display: flex;
     flex-flow: row wrap;
@@ -266,6 +307,11 @@ img {
     justify-content: flex-start;
   }
     
+  .menu {
+    flex-flow: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
   .quote {
     margin: 50px 0 50px 0;
@@ -303,7 +349,7 @@ img {
     justify-content: space-evenly;
     align-items: flex-start;
     gap: 10px;
-    border-top-width: ;
+    
   }
 
   .pics:hover {
