--- a/code/style.css
+++ b/code/style.css
@@ -6,7 +6,8 @@ body {
   font-family: 'DM Sans', sans-serif;
   width: 100%;
   height: 100%;
-  margin: 2%;
+  margin-right: 20%;
+  margin-left: 10%;
 }
 
 header {
@@ -23,6 +24,7 @@ header {
   flex-direction: row;
   float: left;
 }
+
 /*
 @media (min-width: 668px) {
 header img {
@@ -35,6 +37,7 @@ header img {
     display: none;
   }}
 */
+
 header img {
   width: 60px;
   height: auto;
@@ -57,7 +60,7 @@ header img {
   display: inline-block;
   float: right;
   padding: 2%;
-  margin-right: 5%;    
+  margin-right: 20%;    
 }}
 
 a:-webkit-any-link {
@@ -70,6 +73,23 @@ a:hover {
  color: rgb(246, 238, 229); 
  background-color: rgb(131, 106, 75);
 }
+
+.menu {
+  display: inline-block;
+  float: right;
+  padding: 2%;
+  margin-right: 20%;
+}
+
+@media (min-width: 668px) {
+.menu {
+  display: none;
+}}
+
+@media (min-width: 1024px) {
+.menu {
+  display: none;
+}}
 
 .content {
   display: flex;
@@ -84,7 +104,8 @@ a:hover {
   align-items: flex-start;  
   flex-direction: column;
   padding: 20px;
-  width: 90%;
+  width: 100%;
+  margin-right: 20%;
 }
 
 .presentation img {
@@ -148,19 +169,15 @@ h1 {
   flex-flow: row wrap;
   overflow: auto;
 }
-/*
-.content-area {
-  margin-bottom: 80px;
-}
-*/
+
 @media (min-width: 668px) {
 .content-area {
-  max-width: 1024px;
+  margin-right: 10%;
 }}
 
 @media (min-width: 1024px) {
 .content-area {
-  max-width: 2000px;
+  margin-right: 20%;
 }}
 
 main {
@@ -190,10 +207,17 @@ main {
   width: 18%;
 }}
 
-.box h2 {
+.box a {
   color: rgb(84, 181, 179);
   margin-bottom: 20px;
   margin-top: 12px;
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 .box img {
